redirected to corrected file

--- a/signup.html
+++ b/signup.html
@@ -149,7 +149,7 @@
     </div>
     <p
       style="width: 182.99px; height: 24.07px; position: absolute; left: 572px; top: 706px; font-size: 16px; font-weight: 500; text-align: center; color: #000;">
-      <a href="./login1.html">Already have account</a>
+      <a href="./index.html">Already have account</a>
     </p>
     <div style="width: 100px; height: 100px; position: absolute; left: 62px; top: -49px; overflow: hidden;"></div>
   </div>
