--- a/signup.html
+++ b/signup.html
@@ -6,21 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Preview</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    html,
-    body {
-      display: flex;
-      flex-direction: column;
-      flex: 1;
-      width: 100%;
-      height: 100%;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-
-  </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
@@ -37,117 +25,155 @@
           stroke="#7ACDDF" stroke-opacity="0.23" stroke-width="17"></path>
       </g>
     </svg>
-    <div style="width: 375px; height: 42.93px;">
-      <div
-        style="width: 375px; height: 42.93px; position: absolute; left: 566.5px; top: 473.57px; border-radius: 4px; border-width: 1px; border-color: #000; border-style: dashed;">
-      </div>
-      <p
-        style="width: 89.76px; height: 19.02px; position: absolute; left: 628.84px; top: 486.44px; font-size: 14px; font-weight: 300; text-align: center; text-transform: uppercase; color: #000;">
-        password
-      </p>
-      <svg width="25" height="20" viewBox="0 0 25 20" fill="none" xmlns="http://www.w3.org/2000/svg"
-        style="width: 25px; height: 19.08px; position: absolute; left: 582px; top: 486.47px;"
+
+
+
+
+
+
+
+    <div class="container centered" style="margin-left: 5%; margin-top: 5%">
+
+
+
+
+      <svg width="155" height="122" viewBox="0 0 155 122" fill="none" xmlns="http://www.w3.org/2000/svg"
+        style="width: 149.63px; height: 117.77px; position: absolute; left: 672px; top: 210px;"
         preserveAspectRatio="none">
         <path
-          d="M20.8337 17.164V15.5742C20.8337 14.7309 20.3947 13.9221 19.6133 13.3258C18.8318 12.7295 17.772 12.3945 16.667 12.3945H8.33357C7.22849 12.3945 6.16867 12.7295 5.38727 13.3258C4.60586 13.9221 4.16687 14.7309 4.16687 15.5742V17.164"
-          stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+          d="M2.79999 2H19.9109C22.6416 2 25.051 3.71683 25.8452 6.22848L52.632 90.9406C53.4262 93.4521 55.8355 95.169 58.566 95.169H118.92C121.757 95.169 124.234 93.3172 124.932 90.6727L135.738 49.7268C136.436 47.0821 138.912 45.2305 141.75 45.2305H152.431"
+          stroke="black" stroke-width="3.75648" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="10 10">
+        </path>
         <path
-          d="M12.5002 9.21475C14.8014 9.21475 16.6669 7.79115 16.6669 6.03504C16.6669 4.27894 14.8014 2.85534 12.5002 2.85534C10.199 2.85534 8.3335 4.27894 8.3335 6.03504C8.3335 7.79115 10.199 9.21475 12.5002 9.21475Z"
-          stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+          d="M91.277 25.7608C90.3686 24.8878 88.8961 24.8878 87.9878 25.7608L73.1859 39.9911C72.2778 40.8644 72.2778 42.2801 73.1859 43.1533C74.0942 44.0265 75.567 44.0265 76.4753 43.1533L89.6323 30.5044L102.789 43.1533C103.698 44.0265 105.17 44.0265 106.079 43.1533C106.987 42.2801 106.987 40.8644 106.079 39.9911L91.277 25.7608ZM91.9582 69.0817V27.342H87.3065V69.0817H91.9582Z"
+          fill="black"></path>
+        <path
+          d="M73.3512 119.766C77.2048 119.766 80.3288 116.762 80.3288 113.057C80.3288 109.353 77.2048 106.349 73.3512 106.349C69.4976 106.349 66.3736 109.353 66.3736 113.057C66.3736 116.762 69.4976 119.766 73.3512 119.766Z"
+          stroke="black" stroke-width="3.00518" stroke-linejoin="round" stroke-dasharray="10 10"></path>
+        <path
+          d="M107.464 119.766C111.318 119.766 114.442 116.762 114.442 113.057C114.442 109.353 111.318 106.349 107.464 106.349C103.61 106.349 100.486 109.353 100.486 113.057C100.486 116.762 103.61 119.766 107.464 119.766Z"
+          stroke="black" stroke-width="3.00518" stroke-linejoin="round" stroke-dasharray="10 10"></path>
       </svg>
-    </div>
-    <div style="width: 375px; height: 42.93px;">
-      <div
-        style="width: 375px; height: 42.93px; position: absolute; left: 566.5px; top: 535.57px; border-radius: 4px; border-width: 1px; border-color: #000; border-style: dashed;">
-      </div>
+
+
+
+
+
+      <form>
+
+        <div style="width: 375px; height: 42.93px;">
+          <div
+            style="width: 375px; height: 42.93px; position: absolute; left: 566.5px; top: 352.5px; border-radius: 4px; border-width: 1px; border-color: #000; border-style: dashed;">
+          </div>
+          <p>
+            <input
+              style="width: 89.76px; height: 19.02px; position: absolute; left: 628.84px; top: 365.68px; font-size: 14px; font-weight: 300; text-transform: uppercase;"
+              type="text" placeholder="Username" aria-label="Username" id="validationDefaultUsername"
+              aria-describedby="inputGroupPrepend2" required>
+          </p>
+          <svg width="25" height="20" viewBox="0 0 25 20" fill="none" xmlns="http://www.w3.org/2000/svg"
+            style="width: 25px; height: 19.08px; position: absolute; left: 582px; top: 365.4px;"
+            preserveAspectRatio="none">
+            <path
+              d="M20.8337 17.0943V15.5045C20.8337 14.6611 20.3947 13.8524 19.6133 13.2561C18.8318 12.6598 17.772 12.3248 16.667 12.3248H8.33357C7.22849 12.3248 6.16867 12.6598 5.38727 13.2561C4.60586 13.8524 4.16687 14.6611 4.16687 15.5045V17.0943"
+              stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path
+              d="M12.5002 9.14505C14.8014 9.14505 16.6669 7.72145 16.6669 5.96534C16.6669 4.20924 14.8014 2.78564 12.5002 2.78564C10.199 2.78564 8.3335 4.20924 8.3335 5.96534C8.3335 7.72145 10.199 9.14505 12.5002 9.14505Z"
+              stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+        </div>
+
+
+
+        <div style="width: 375px; height: 42.93px;">
+          <div
+            style="width: 375px; height: 42.93px; position: absolute; left: 567.5px; top: 414.6px; border-radius: 4px; border-width: 1px; border-color: #000; border-style: dashed;">
+          </div>
+          <p>
+            <input
+              style="width: 127.66px; height: 19.02px; position: absolute; left: 622px; top: 427.79px; font-size: 14px; font-weight: 300; text-transform: uppercase;"
+              type="text" placeholder="Email Address" aria-label="Email Address" id="validationDefaultUsername"
+              aria-describedby="inputGroupPrepend2" required>
+          </p>
+          <svg width="26" height="20" viewBox="0 0 26 20" fill="none" xmlns="http://www.w3.org/2000/svg"
+            style="width: 25px; height: 19.08px; position: absolute; left: 583px; top: 427.51px;"
+            preserveAspectRatio="none">
+            <path
+              d="M21.831 17.1987V15.6089C21.831 14.7655 21.392 13.9568 20.6106 13.3605C19.8292 12.7642 18.7693 12.4292 17.6643 12.4292H9.33088C8.2258 12.4292 7.16599 12.7642 6.38458 13.3605C5.60317 13.9568 5.16418 14.7655 5.16418 15.6089V17.1987"
+              stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path
+              d="M13.4975 9.24945C15.7987 9.24945 17.6642 7.82584 17.6642 6.06974C17.6642 4.31364 15.7987 2.89004 13.4975 2.89004C11.1963 2.89004 9.33081 4.31364 9.33081 6.06974C9.33081 7.82584 11.1963 9.24945 13.4975 9.24945Z"
+              stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+        </div>
+
+
+        <div style="width: 375px; height: 42.93px;">
+          <div
+            style="width: 375px; height: 42.93px; position: absolute; left: 566.5px; top: 473.57px; border-radius: 4px; border-width: 1px; border-color: #000; border-style: dashed;">
+          </div>
+          <p>
+            <input
+              style="width: 89.76px; height: 19.02px; position: absolute; left: 628.84px; top: 486.44px; font-size: 14px; font-weight: 300; text-transform: uppercase;"
+              type="text" placeholder="password" aria-label="password" id="validationDefaultUsername"
+              aria-describedby="inputGroupPrepend2" required>
+          </p>
+          <svg width="25" height="20" viewBox="0 0 25 20" fill="none" xmlns="http://www.w3.org/2000/svg"
+            style="width: 25px; height: 19.08px; position: absolute; left: 582px; top: 486.47px;"
+            preserveAspectRatio="none">
+            <path
+              d="M20.8337 17.164V15.5742C20.8337 14.7309 20.3947 13.9221 19.6133 13.3258C18.8318 12.7295 17.772 12.3945 16.667 12.3945H8.33357C7.22849 12.3945 6.16867 12.7295 5.38727 13.3258C4.60586 13.9221 4.16687 14.7309 4.16687 15.5742V17.164"
+              stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path
+              d="M12.5002 9.21475C14.8014 9.21475 16.6669 7.79115 16.6669 6.03504C16.6669 4.27894 14.8014 2.85534 12.5002 2.85534C10.199 2.85534 8.3335 4.27894 8.3335 6.03504C8.3335 7.79115 10.199 9.21475 12.5002 9.21475Z"
+              stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+        </div>
+
+
+
+
+        <div style="width: 375px; height: 42.93px;">
+          <div
+            style="width: 375px; height: 42.93px; position: absolute; left: 566.5px; top: 535.57px; border-radius: 4px; border-width: 1px; border-color: #000; border-style: dashed;">
+          </div>
+          <p>
+            <input
+              style="width: 172px; height: 19px; position: absolute; left: 620px; top: 547px; font-size: 14px; font-weight: 300; text-transform: uppercase;"
+              type="text" placeholder="confirm password" aria-label="confirm password" id="validationDefaultUsername"
+              aria-describedby="inputGroupPrepend2" required>
+          </p>
+          <svg width="25" height="20" viewBox="0 0 25 20" fill="none" xmlns="http://www.w3.org/2000/svg"
+            style="width: 25px; height: 19.08px; position: absolute; left: 582px; top: 548.47px;"
+            preserveAspectRatio="none">
+            <path
+              d="M19.7919 9.21901H5.20847C4.05787 9.21901 3.12512 9.93081 3.12512 10.8089V16.3733C3.12512 17.2514 4.05787 17.9632 5.20847 17.9632H19.7919C20.9425 17.9632 21.8753 17.2514 21.8753 16.3733V10.8089C21.8753 9.93081 20.9425 9.21901 19.7919 9.21901Z"
+              stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path
+              d="M7.29187 9.21902V6.03931C7.29187 4.98518 7.84061 3.97421 8.81737 3.22882C9.79413 2.48344 11.1189 2.06468 12.5002 2.06468C13.8816 2.06468 15.2064 2.48344 16.1831 3.22882C17.1599 3.97421 17.7086 4.98518 17.7086 6.03931V9.21902"
+              stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+        </div>
+
+
+
+        <div style="width: 376px; height: 54.16px;">
+          <div
+            style="width: 376px; height: 54.16px; position: absolute; left: 566.5px; top: 638.03px; border-radius: 4px; background: #000; box-shadow: 0px 4px 4px 0 rgba(0,0,0,0.3);">
+          </div>
+          <p
+            style="width: 67.68px; height: 24.07px; position: absolute; left: 721.16px; top: 654.18px; font-size: 16px; font-weight: 600; text-align: center; text-transform: uppercase; color: #fff;">
+            <button type="submit">login</button>
+          </p>
+        </div>
+
+      </form>
       <p
-        style="width: 172px; height: 19px; position: absolute; left: 620px; top: 547px; font-size: 14px; font-weight: 300; text-align: center; text-transform: uppercase; color: #000;">
-        confirm password
+        style="width: 182.99px; height: 24.07px; position: absolute; left: 656px; top: 706px; font-size: 16px; font-weight: 500; text-align: center; color: #000;">
+        <a href="./index.html">Already have account</a>
       </p>
-      <svg width="25" height="20" viewBox="0 0 25 20" fill="none" xmlns="http://www.w3.org/2000/svg"
-        style="width: 25px; height: 19.08px; position: absolute; left: 582px; top: 548.47px;"
-        preserveAspectRatio="none">
-        <path
-          d="M19.7919 9.21901H5.20847C4.05787 9.21901 3.12512 9.93081 3.12512 10.8089V16.3733C3.12512 17.2514 4.05787 17.9632 5.20847 17.9632H19.7919C20.9425 17.9632 21.8753 17.2514 21.8753 16.3733V10.8089C21.8753 9.93081 20.9425 9.21901 19.7919 9.21901Z"
-          stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
-        <path
-          d="M7.29187 9.21902V6.03931C7.29187 4.98518 7.84061 3.97421 8.81737 3.22882C9.79413 2.48344 11.1189 2.06468 12.5002 2.06468C13.8816 2.06468 15.2064 2.48344 16.1831 3.22882C17.1599 3.97421 17.7086 4.98518 17.7086 6.03931V9.21902"
-          stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
-      </svg>
+      <div style="width: 100px; height: 100px; position: absolute; left: 62px; top: -49px; overflow: hidden;"></div>
     </div>
-    <div style="width: 376px; height: 54.16px;">
-      <div
-        style="width: 376px; height: 54.16px; position: absolute; left: 566.5px; top: 638.03px; border-radius: 4px; background: #000; box-shadow: 0px 4px 4px 0 rgba(0,0,0,0.3);">
-      </div>
-      <p
-        style="width: 67.68px; height: 24.07px; position: absolute; left: 721.16px; top: 654.18px; font-size: 16px; font-weight: 600; text-align: center; text-transform: uppercase; color: #fff;">
-        login
-      </p>
-    </div>
-
-
-    <svg width="155" height="122" viewBox="0 0 155 122" fill="none" xmlns="http://www.w3.org/2000/svg"
-      style="width: 149.63px; height: 117.77px; position: absolute; left: 672px; top: 175px;"
-      preserveAspectRatio="none">
-      <path
-        d="M2.79999 2H19.9109C22.6416 2 25.051 3.71683 25.8452 6.22848L52.632 90.9406C53.4262 93.4521 55.8355 95.169 58.566 95.169H118.92C121.757 95.169 124.234 93.3172 124.932 90.6727L135.738 49.7268C136.436 47.0821 138.912 45.2305 141.75 45.2305H152.431"
-        stroke="black" stroke-width="3.75648" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="10 10">
-      </path>
-      <path
-        d="M91.277 25.7608C90.3686 24.8878 88.8961 24.8878 87.9878 25.7608L73.1859 39.9911C72.2778 40.8644 72.2778 42.2801 73.1859 43.1533C74.0942 44.0265 75.567 44.0265 76.4753 43.1533L89.6323 30.5044L102.789 43.1533C103.698 44.0265 105.17 44.0265 106.079 43.1533C106.987 42.2801 106.987 40.8644 106.079 39.9911L91.277 25.7608ZM91.9582 69.0817V27.342H87.3065V69.0817H91.9582Z"
-        fill="black"></path>
-      <path
-        d="M73.3512 119.766C77.2048 119.766 80.3288 116.762 80.3288 113.057C80.3288 109.353 77.2048 106.349 73.3512 106.349C69.4976 106.349 66.3736 109.353 66.3736 113.057C66.3736 116.762 69.4976 119.766 73.3512 119.766Z"
-        stroke="black" stroke-width="3.00518" stroke-linejoin="round" stroke-dasharray="10 10"></path>
-      <path
-        d="M107.464 119.766C111.318 119.766 114.442 116.762 114.442 113.057C114.442 109.353 111.318 106.349 107.464 106.349C103.61 106.349 100.486 109.353 100.486 113.057C100.486 116.762 103.61 119.766 107.464 119.766Z"
-        stroke="black" stroke-width="3.00518" stroke-linejoin="round" stroke-dasharray="10 10"></path>
-    </svg>
-
-
-
-    <div style="width: 375px; height: 42.93px;">
-      <div
-        style="width: 375px; height: 42.93px; position: absolute; left: 567.5px; top: 414.6px; border-radius: 4px; border-width: 1px; border-color: #000; border-style: dashed;">
-      </div>
-      <p
-        style="width: 127.66px; height: 19.02px; position: absolute; left: 622px; top: 427.79px; font-size: 14px; font-weight: 300; text-align: center; text-transform: uppercase; color: #000;">
-        Email Address
-      </p>
-      <svg width="26" height="20" viewBox="0 0 26 20" fill="none" xmlns="http://www.w3.org/2000/svg"
-        style="width: 25px; height: 19.08px; position: absolute; left: 583px; top: 427.51px;"
-        preserveAspectRatio="none">
-        <path
-          d="M21.831 17.1987V15.6089C21.831 14.7655 21.392 13.9568 20.6106 13.3605C19.8292 12.7642 18.7693 12.4292 17.6643 12.4292H9.33088C8.2258 12.4292 7.16599 12.7642 6.38458 13.3605C5.60317 13.9568 5.16418 14.7655 5.16418 15.6089V17.1987"
-          stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
-        <path
-          d="M13.4975 9.24945C15.7987 9.24945 17.6642 7.82584 17.6642 6.06974C17.6642 4.31364 15.7987 2.89004 13.4975 2.89004C11.1963 2.89004 9.33081 4.31364 9.33081 6.06974C9.33081 7.82584 11.1963 9.24945 13.4975 9.24945Z"
-          stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
-      </svg>
-    </div>
-    <div style="width: 375px; height: 42.93px;">
-      <div
-        style="width: 375px; height: 42.93px; position: absolute; left: 566.5px; top: 352.5px; border-radius: 4px; border-width: 1px; border-color: #000; border-style: dashed;">
-      </div>
-      <p
-        style="width: 89.76px; height: 19.02px; position: absolute; left: 628.84px; top: 365.68px; font-size: 14px; font-weight: 300; text-align: center; text-transform: uppercase; color: #000;">
-        Username
-      </p>
-      <svg width="25" height="20" viewBox="0 0 25 20" fill="none" xmlns="http://www.w3.org/2000/svg"
-        style="width: 25px; height: 19.08px; position: absolute; left: 582px; top: 365.4px;" preserveAspectRatio="none">
-        <path
-          d="M20.8337 17.0943V15.5045C20.8337 14.6611 20.3947 13.8524 19.6133 13.2561C18.8318 12.6598 17.772 12.3248 16.667 12.3248H8.33357C7.22849 12.3248 6.16867 12.6598 5.38727 13.2561C4.60586 13.8524 4.16687 14.6611 4.16687 15.5045V17.0943"
-          stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
-        <path
-          d="M12.5002 9.14505C14.8014 9.14505 16.6669 7.72145 16.6669 5.96534C16.6669 4.20924 14.8014 2.78564 12.5002 2.78564C10.199 2.78564 8.3335 4.20924 8.3335 5.96534C8.3335 7.72145 10.199 9.14505 12.5002 9.14505Z"
-          stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
-      </svg>
-    </div>
-    <p
-      style="width: 182.99px; height: 24.07px; position: absolute; left: 656px; top: 706px; font-size: 16px; font-weight: 500; text-align: center; color: #000;">
-      <a href="./index.html">Already have account</a>
-    </p>
-    <div style="width: 100px; height: 100px; position: absolute; left: 62px; top: -49px; overflow: hidden;"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
