--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 
-    <div class="container centered">
+    <div class="container centered" style="margin-left: 5%; margin-top: 5%">
 
 
       <svg width="155" height="122" viewBox="0 0 155 122" fill="none" xmlns="http://www.w3.org/2000/svg"
